--- a/index.html
+++ b/index.html
@@ -35,12 +35,16 @@
         <div id="bar"></div>
       </div>
       <div class="col-md-5">
-        <div id="pie"></div>
+        <div id="gauge"></div>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-md-8">
         <div id="bubble"></div>
+      </div>
+    <div class="col-md-4">
+        <div id="pie"></div>
+    </div>
       </div>
     </div>
   </div>
